add Chord, arpeggiation; KeySignature and Tempo; Conversion now does a lot more; moved Context creation outside of DevelopmentHelper